--- a/sketchpad/package.json
+++ b/sketchpad/package.json
@@ -9,11 +9,13 @@
     "bootstrap": "^5.2.2",
     "date-fns": "^2.29.3",
     "html-to-image": "^1.10.8",
+    "konva": "^8.3.14",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-to-pdf": "^0.0.14",
