--- a/sketchpad/package.json
+++ b/sketchpad/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.4.3",
